Use junit-pioneer to simplify polluted tests
* Add junit-pioneer to inject environment variables into tests. This allows
removing custom Gradle task pollutedTest and running them normally.
* Refactor WhenAnAsciidoctorClassIsInstantiatedInAnEnvironmentWithGemPath
as a parametrized tests.
* Add missing cases for Asciidoctor Factory in
WhenAnAsciidoctorClassIsInstantiatedInAnEnvironmentWithGemPath.

Fixes #1193