@@ -75,6 +75,7 @@ ext {
   jsoupVersion = '1.14.3'
   junit4Version = '4.13.2'
   junit5Version = '5.9.2'
+  junitPioneerVersion = '2.0.1'
   assertjVersion = '3.24.2'
   nettyVersion = '4.1.58.Final'
   saxonVersion = '9.9.0-2'
@@ -139,8 +140,10 @@ subprojects {
   if (usesJUnit5(it.project)) {
     dependencies {
       testImplementation(platform("org.junit:junit-bom:$junit5Version"))
-      testImplementation("org.junit.jupiter:junit-jupiter-api")
-      testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+      testImplementation "org.junit.jupiter:junit-jupiter-api"
+      testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
+      testImplementation "org.junit.jupiter:junit-jupiter-params"
+      testImplementation "org.junit-pioneer:junit-pioneer:$junitPioneerVersion"
     }
   }
 
@@ -192,6 +195,10 @@ subprojects {
           logger.info "Test results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
         }
       }
+    }
+    if (DefaultNativePlatform.getCurrentOperatingSystem().isWindows()) {
+      // Allow junit-pioneer environment manipulation on Windows + Java17+
+      jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
     }
   }
 
